# Oscilloscope-CS565

./: .gitignore  CLAUDE.md  CMakeLists.txt  LED_Project.c  Makefile  README.md  main.c  main.cpp  morse_Project.c  pipeline.cpp  qt_main.cpp
docs/: Dev_plan.md  NEW_FEATURE.md  NEW_FEATURE_PLAN.md  PLAN.md  Rubric_for_first_presentation.md  class_diagram.md  class_diagram_01_iolib_singlethread.puml  class_diagram_01_overview.puml  class_diagram_02_iolib_pipeline.puml  class_diagram_03_model.puml  class_diagram_04_views.puml  class_diagram_05_controller.puml  class_diagram_ui_only.puml  class_implementation.md  code_structure.md  easy_understanding.md  final_project_progress_specification.md  presentation_flow.md  presentation_guidance.md  项目说明与演示指南.md
ioLibrary/: CircularBuffer.cpp  CircularBuffer.h  FtdiDevice.c  FtdiDevice.cpp  FtdiDevice.h  ThreadedReader.cpp  ThreadedReader.h  ThreadedWriter.cpp  ThreadedWriter.h  ioBuffer.c  ioBuffer.cpp  ioBuffer.h  ioCircularBuffer.cpp  ioCircularBuffer.h  ioFtdiDevice.cpp  ioFtdiDevice.h  ioRead.c  ioRead.cpp  ioRead.h  ioScaleShiftPipeline.cpp  ioScaleShiftPipeline.h  ioThreadedReader.cpp  ioThreadedReader.h  ioThreadedWriter.cpp  ioThreadedWriter.h  ioWrite.c  ioWrite.cpp  ioWrite.h
ui/: ioAbstractOscilloscopeView.h  ioCompactOscilloscopeView.cpp  ioCompactOscilloscopeView.h  ioMainWindow.cpp  ioMainWindow.h  ioOscilloscopeModel.cpp  ioOscilloscopeModel.h  ioWaveformWidget.cpp  ioWaveformWidget.h  ioWorkspaceOscilloscopeView.cpp  ioWorkspaceOscilloscopeView.h
